--- a/html/index.html
+++ b/html/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>의류쇼핑몰</title>
+	<title>forest</title>
 	<link rel="stylesheet" href="../css/all.min.css">
 	<link rel="stylesheet" href="../css/reset.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="../css/animate.min.css">
 	<link rel="stylesheet" href="../css/swiper-bundle.min.css">
 	<link rel="stylesheet" href="../css/index.css">
@@ -13,6 +14,44 @@
 	<script src="../js/swiper-bundle.min.js"></script>
 </head>
 <body>
-	
+	<div class="main-wrapper">
+		<div class="bg-wrap">
+		<img src="../img/bg-1.jpg" alt="메인배경" class="w-100">
+		</div>
+	<header class="header-wrapper">
+		<nav class="navi-wrapper">
+			<ul class="navi">
+				<li><a href="#">HOME<i class="fa fa-angle-down"></i></a></li>
+				<li><a href="#">PAGES<i class="fa fa-angle-down"></i></a></li>
+				<li><a href="#">PORTFOLIO<i class="fa fa-angle-down"></i></a></li>
+				<li><a href="#">SHOP<i class="fa fa-angle-down"></i></a></li>
+				<li><a href="#">BLOG<i class="fa fa-angle-down"></i></a></li>
+			</ul>
+		</nav>
+		<div class="logo-wrap">
+			<a href="#"><img src="../img/logo (1).png" alt=""></a>
+		</div>
+		<div class="sns-wrap">
+			<ul class="sns">
+				<li>
+					<i class="fa fa-facebook"></i>
+					<em>FACEBOOK</em>
+				</li>
+				<li>
+					<i class="fa fa-facebook"></i>
+					<em>FACEBOOK</em>
+				</li>
+				<li>
+					<i class="fa fa-facebook"></i>
+					<em>FACEBOOK</em>
+				</li>
+				<li>
+					<i class="fa fa-facebook"></i>
+					<em>FACEBOOK</em>
+				</li>
+			</ul>
+		</div>
+	</header>
+</div>
 </body>
 </html>
