--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,45 +14,77 @@
 	<script src="../js/jquery-3.5.1.min.js"></script>
 	<script src="../js/swiper-bundle.min.js"></script>
 </head>
+
 <body>
 	<div class="main-wrapper">
 		<div class="bg-wrap">
-		<img src="../img/bg-1.jpg" alt="메인배경" class="w-100">
+			<img src="../img/bg-1.jpg" alt="메인배경" class="w-100">
 		</div>
-	<header class="header-wrapper">
-		<nav class="navi-wrapper">
-			<ul class="navi">
-				<li><a href="#">HOME<i class="fa fa-angle-down"></i></a></li>
-				<li><a href="#">PAGES<i class="fa fa-angle-down"></i></a></li>
-				<li><a href="#">PORTFOLIO<i class="fa fa-angle-down"></i></a></li>
-				<li><a href="#">SHOP<i class="fa fa-angle-down"></i></a></li>
-				<li><a href="#">BLOG<i class="fa fa-angle-down"></i></a></li>
-			</ul>
-		</nav>
-		<div class="logo-wrap">
-			<a href="#"><img src="../img/logo (1).png" alt=""></a>
+		<header class="header-wrapper">
+			<nav class="navi-wrapper">
+				<ul class="navi">
+					<!-- <li><a href="#">HOME<i class="fa fa-angle-down"></i></a>
+						<ul class="sub">
+							<li><a href="#">Home Onepage<i class="fa fa-angle-down"></i></a>
+								<ul class="sub2">
+									<li><a href="#">Home main onepage</a></li>
+									<li><a href="#">Home text silder onepage</a></li>
+									<li><a href="#">Home youtube onepage</a></li>
+									<li><a href="#">Home slider onepage</a></li>
+								</ul>
+							</li>
+							<li><a href="#">Home Multipage<i class="fa fa-angle-down"></i></a>
+								<ul class="sub2">
+									<li><a href="#">Home main</a></li>
+									<li><a href="#">Home silder</a></li>
+									<li><a href="#">Home youtube</a></li>
+									<li><a href="#">Home text slider</a></li>
+									<li><a href="#">Home light bg</a></li>
+									<li><a href="#">Home youtube 2</a></li>
+									<li><a href="#">Home dark</a></li>
+								</ul>
+							</li>
+						</ul>
+					</li>
+					<li><a href="#">PAGES<i class="fa fa-angle-down"></i></a></li>
+					<li><a href="#">PORTFOLIO<i class="fa fa-angle-down"></i></a></li>
+					<li><a href="#">SHOP<i class="fa fa-angle-down"></i></a></li>
+					<li><a href="#">BLOG<i class="fa fa-angle-down"></i></a></li> -->
+				</ul>
+			</nav>
+			<div class="logo-wrap">
+				<a href="#"><img src="../img/logo (1).png" alt=""></a>
+			</div>
+			<div class="sns-wrap">
+				<ul class="sns">
+					<li>
+						<i class="fa fa-facebook"></i>
+						<a href="#"><em>FACEBOOK</em></a>
+					</li>
+					<li>
+						<i class="fa fa-twitter"></i>
+						<a href="#"><em>TWITTER</em></a>
+					</li>
+					<li>
+						<i class="fa fa-instagram"></i>
+						<a href="#"><em>INSTAGRAM</em></a>
+					</li>
+					<li>
+						<i class="fa fa-vimeo"></i>
+						<a href="#"><em>VIMEO</em></a>
+					</li>
+				</ul>
+			</div>
+		</header>
+		<div class="main-txt wrapper">
+			<p>GREETINGS, WE ARE</p>
+			<h1 class="main-title">FORESTER</h1>
+			<h2 class="title">Unordinary digital agency crafting sophisticated and <br>
+				eccentric stuff that will leave you speechless</h2>
+			<button class="bt-green">EXPLORE NOW</button>
 		</div>
-		<div class="sns-wrap">
-			<ul class="sns">
-				<li>
-					<i class="fa fa-facebook"></i>
-					<em>FACEBOOK</em>
-				</li>
-				<li>
-					<i class="fa fa-facebook"></i>
-					<em>FACEBOOK</em>
-				</li>
-				<li>
-					<i class="fa fa-facebook"></i>
-					<em>FACEBOOK</em>
-				</li>
-				<li>
-					<i class="fa fa-facebook"></i>
-					<em>FACEBOOK</em>
-				</li>
-			</ul>
-		</div>
-	</header>
-</div>
+	</div>
+	<script src="../js/index.js"></script>
 </body>
+
 </html>
