--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
 	<title>forest</title>
 	<link rel="stylesheet" href="../css/all.min.css">
 	<link rel="stylesheet" href="../css/reset.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="../css/animate.min.css">
 	<link rel="stylesheet" href="../css/swiper-bundle.min.css">
@@ -18,7 +19,7 @@
 <body>
 	<div class="main-wrapper">
 		<div class="bg-wrap">
-			<img src="../img/bg-1.jpg" alt="메인배경" class="w-100">
+
 		</div>
 		<header class="header-wrapper">
 			<nav class="navi-wrapper">
@@ -77,13 +78,55 @@
 			</div>
 		</header>
 		<div class="main-txt wrapper">
-			<p>GREETINGS, WE ARE</p>
+			<p class="title">GREETINGS, WE ARE</p>
 			<h1 class="main-title">FORESTER</h1>
 			<h2 class="title">Unordinary digital agency crafting sophisticated and <br>
 				eccentric stuff that will leave you speechless</h2>
 			<button class="bt-green">EXPLORE NOW</button>
 		</div>
 	</div>
+	<div class="story wrapper">
+		<p class="title">OUR STORY</p>
+		<h2 class="title">Unordinary digital agency crafting sophisticated and eccentric stuff that will leave you
+			speechless, we had opportunity to work on wide variety of projects for different clients around the
+			world, we're responsible and our client is our priority</h2>
+		<p class="more">Interested in our story and want to meet us even better? <a href="#">Read More</a></p>
+	</div>
+	<div class="services ">
+		<div class="wrapper">
+			<p class="title">OUR EXPERTISE</p>
+			<h1 class="title">Services</h1>
+			<div class="services-wrap ">
+				<div class="web-design service">
+					<div class="img-wrap bg-wrap">
+						<i class="ti-ruler-pencil x5" style=" color:#ffffff !important;"></i>
+					</div>
+					<div class="txt-wrap">
+						<h3 class="title">Web Design</h3>
+						<h2 class="txt">Crafting visually stunning designs that will leave you speechless</h2>
+						<p class="title">READ MORE</p>
+					</div>
+				</div>
+				<div class="web-design service">
+					<div class="img-wrap bg-wrap"></div>
+					<div class="txt-wrap">
+						<h3 class="title">Web Design</h3>
+						<h2 class="txt">Crafting visually stunning designs that will leave you speechless</h2>
+						<p class="title">READ MORE</p>
+					</div>
+				</div>
+				<div class="Marketing service">
+					<div class="img-wrap bg-wrap"></div>
+					<div class="txt-wrap">
+						<h3 class="title">Marketing</h3>
+						<h2 class="txt">We'll advertise your product using latest and unique fresh marketing methods.</h2>
+						<p class="title">READ MORE</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<script src="../js/index.js"></script>
 </body>
 
