--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,6 @@
 	<title>forest</title>
 	<link rel="stylesheet" href="../css/all.min.css">
 	<link rel="stylesheet" href="../css/reset.css">
-	<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="../css/animate.min.css">
 	<link rel="stylesheet" href="../css/swiper-bundle.min.css">
@@ -82,7 +81,7 @@
 			<h1 class="main-title">FORESTER</h1>
 			<h2 class="title">Unordinary digital agency crafting sophisticated and <br>
 				eccentric stuff that will leave you speechless</h2>
-			<button class="bt-green">EXPLORE NOW</button>
+			<button class="bt-green bt">EXPLORE NOW</button>
 		</div>
 	</div>
 	<div class="story wrapper">
@@ -96,10 +95,10 @@
 		<div class="wrapper">
 			<p class="title">OUR EXPERTISE</p>
 			<h1 class="title">Services</h1>
-			<div class="services-wrap ">
+			<div class="services-wrap">
 				<div class="web-design service">
 					<div class="img-wrap bg-wrap">
-						<i class="ti-ruler-pencil x5" style=" color:#ffffff !important;"></i>
+						<i class="fa fa-wpforms"aria-hidden="true" style=" color:#ffffff !important;"></i>
 					</div>
 					<div class="txt-wrap">
 						<h3 class="title">Web Design</h3>
@@ -108,7 +107,9 @@
 					</div>
 				</div>
 				<div class="web-design service">
-					<div class="img-wrap bg-wrap"></div>
+					<div class="img-wrap bg-wrap">
+						<i class="fa fa-wpforms"aria-hidden="true" style=" color:#ffffff !important;"></i>
+					</div>
 					<div class="txt-wrap">
 						<h3 class="title">Web Design</h3>
 						<h2 class="txt">Crafting visually stunning designs that will leave you speechless</h2>
@@ -116,7 +117,9 @@
 					</div>
 				</div>
 				<div class="Marketing service">
-					<div class="img-wrap bg-wrap"></div>
+					<div class="img-wrap bg-wrap">
+						<i class="fa fa-tasks" aria-hidden="true" style=" color:#ffffff !important;"></i>
+					</div>
 					<div class="txt-wrap">
 						<h3 class="title">Marketing</h3>
 						<h2 class="txt">We'll advertise your product using latest and unique fresh marketing methods.</h2>
@@ -124,9 +127,57 @@
 					</div>
 				</div>
 			</div>
+			<p class="bot">Top quality services executed by our devoted, yet <br> creative team. Nothing less than creative.</p>
+			<button class="bt bt-white">LET'S GET IN TOUCH</button>
 		</div>
 	</div>
-
+	<div class="gallery ">
+		<div class="wrapper">
+			<p class="title">OUR PORTFOLIO</p>
+			<h1 class="title">Gallery</h1>
+			<ul class="menu">
+				<li><a href="#">ALL</a>
+				    <div class="popper">6</div>
+				</li>
+				<li><a href="#">BRANDING</a>
+					<div class="popper">3</div></li>
+				<li><a href="#">DIGITAL</a>
+					<div class="popper">1</div></li>
+				<li><a href="#">PRINT</a>
+					<div class="popper">3</div></li>
+			</ul>
+			<div class="prd">
+				<ul class="prd">
+					<li>
+						<a href="#"><img src="../img/prd1.jpg" alt="" class="w-100"></a>
+						<a href="#"><div class="prd-bg">
+							<i class=""></i>
+						</div></a>
+					</li>
+					<li>
+						<a href="#"><img src="../img/prd2.jpg" alt="" class="w-100"></a>
+						<a href="#"><div class="prd-bg"></div></a>
+					</li>
+					<li>
+						<a href="#"><img src="../img/prd3.jpg" alt="" class="w-100"></a>
+						<a href="#"><div class="prd-bg"></div></a>
+					</li>
+					<li>
+						<a href="#"><img src="../img/prd4.jpg" alt="" class="w-100"></a>
+						<a href="#"><div class="prd-bg"></div></a>
+					</li>
+					<li>
+						<a href="#"><img src="../img/prd5.jpg" alt="" class="w-100"></a>
+						<a href="#"><div class="prd-bg"></div></a>
+					</li>
+					<li>
+						<a href="#"><img src="../img/prd6.jpg" alt="" class="w-100"></a>
+						<a href="#"><div class="prd-bg"></div></a>
+					</li>
+				</ul>
+			</div>
+	</div>
+	</div>
 	<script src="../js/index.js"></script>
 </body>
 
