--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="../css/index.css">
 	<script src="../js/jquery-3.5.1.min.js"></script>
 	<script src="../js/swiper-bundle.min.js"></script>
+	<script src="../js/swiper-bundle.min.js"></script>
 </head>
 
 <body>
@@ -98,7 +99,7 @@
 			<div class="services-wrap">
 				<div class="web-design service">
 					<div class="img-wrap bg-wrap">
-						<i class="fa fa-wpforms"aria-hidden="true" style=" color:#ffffff !important;"></i>
+						<i class="fa fa-wpforms" aria-hidden="true" style=" color:#ffffff !important;"></i>
 					</div>
 					<div class="txt-wrap">
 						<h3 class="title">Web Design</h3>
@@ -108,7 +109,7 @@
 				</div>
 				<div class="web-design service">
 					<div class="img-wrap bg-wrap">
-						<i class="fa fa-wpforms"aria-hidden="true" style=" color:#ffffff !important;"></i>
+						<i class="fa fa-wpforms" aria-hidden="true" style=" color:#ffffff !important;"></i>
 					</div>
 					<div class="txt-wrap">
 						<h3 class="title">Web Design</h3>
@@ -122,61 +123,394 @@
 					</div>
 					<div class="txt-wrap">
 						<h3 class="title">Marketing</h3>
-						<h2 class="txt">We'll advertise your product using latest and unique fresh marketing methods.</h2>
+						<h2 class="txt">We'll advertise your product using latest and unique fresh marketing methods.
+						</h2>
 						<p class="title">READ MORE</p>
 					</div>
 				</div>
 			</div>
-			<p class="bot">Top quality services executed by our devoted, yet <br> creative team. Nothing less than creative.</p>
+			<p class="bot">Top quality services executed by our devoted, yet <br> creative team. Nothing less than
+				creative.</p>
 			<button class="bt bt-white">LET'S GET IN TOUCH</button>
 		</div>
 	</div>
-	<div class="gallery ">
+	<div class="gallery">
 		<div class="wrapper">
 			<p class="title">OUR PORTFOLIO</p>
 			<h1 class="title">Gallery</h1>
 			<ul class="menu">
 				<li><a href="#">ALL</a>
-				    <div class="popper">6</div>
+					<div class="popper">6</div>
 				</li>
 				<li><a href="#">BRANDING</a>
-					<div class="popper">3</div></li>
+					<div class="popper">3</div>
+				</li>
 				<li><a href="#">DIGITAL</a>
-					<div class="popper">1</div></li>
+					<div class="popper">1</div>
+				</li>
 				<li><a href="#">PRINT</a>
-					<div class="popper">3</div></li>
+					<div class="popper">3</div>
+				</li>
 			</ul>
-			<div class="prd">
-				<ul class="prd">
-					<li>
-						<a href="#"><img src="../img/prd1.jpg" alt="" class="w-100"></a>
-						<a href="#"><div class="prd-bg">
-							<i class=""></i>
-						</div></a>
-					</li>
-					<li>
-						<a href="#"><img src="../img/prd2.jpg" alt="" class="w-100"></a>
-						<a href="#"><div class="prd-bg"></div></a>
-					</li>
-					<li>
-						<a href="#"><img src="../img/prd3.jpg" alt="" class="w-100"></a>
-						<a href="#"><div class="prd-bg"></div></a>
-					</li>
-					<li>
-						<a href="#"><img src="../img/prd4.jpg" alt="" class="w-100"></a>
-						<a href="#"><div class="prd-bg"></div></a>
-					</li>
-					<li>
-						<a href="#"><img src="../img/prd5.jpg" alt="" class="w-100"></a>
-						<a href="#"><div class="prd-bg"></div></a>
-					</li>
-					<li>
-						<a href="#"><img src="../img/prd6.jpg" alt="" class="w-100"></a>
-						<a href="#"><div class="prd-bg"></div></a>
-					</li>
-				</ul>
+			<div class="pager-wrap"></div>
+		</div>
+		<div class="prd swiper-container">
+			<ul class="prd swiper-wrapper">
+				<li class="all swiper-slide">
+					<ul>
+						<li>
+							<div class="img-bg">
+								<div class="img-wrap">
+									<img src="../img/prd1.jpg" alt="" class="w-100">
+								</div>
+								<div class="prd-bg">
+									<i class="fa fa-link" aria-hidden="true"></i>
+									<h3 class="title">Print</h3>
+									<p class="title">PROJECT SIX</p>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="img-bg">
+								<div class="img-wrap">
+									<img src="../img/prd2.jpg" alt="" class="w-100">
+								</div>
+								<div class="prd-bg">
+									<i class="fa fa-arrows-alt" aria-hidden="true"></i>
+									<h3 class="title">Digital</h3>
+									<p class="title">PROJECT FIVE</p>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="img-bg">
+								<div class="img-wrap">
+									<img src="../img/prd3.jpg" alt="" class="w-100">
+								</div>
+								<div class="prd-bg">
+									<i class="fa fa-picture-o" aria-hidden="true"></i>
+									<h3 class="title">Branding</h3>
+									<p class="title">PROJECT ONE</p>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="img-bg">
+								<div class="img-wrap">
+									<img src="../img/prd4.jpg" alt="" class="w-100">
+								</div>
+								<div class="prd-bg">
+									<i class="fa fa-arrows-alt" aria-hidden="true"></i>
+									<h3 class="title">Branding-Print</h3>
+									<p class="title">PROJECT TWO</p>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="img-bg">
+								<div class="img-wrap">
+									<img src="../img/prd5.jpg" alt="" class="w-100">
+								</div>
+								<div class="prd-bg">
+									<i class="fa fa-video-camera" aria-hidden="true"></i>
+									<h3 class="title">Print</h3>
+									<p class="title">WATCH ON YOUTUBE</p>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="img-bg">
+								<div class="img-wrap">
+									<img src="../img/prd6.jpg" alt="" class="w-100">
+								</div>
+								<div class="prd-bg">
+									<i class="fa fa-video-camera" aria-hidden="true"></i>
+									<h3 class="title">Branding</h3>
+									<p class="title">WATCH ON VIDEO</p>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</li>
+				<li class="branding swiper-slide">
+					<ul>
+						<li>
+							<div class="img-bg">
+								<div class="img-wrap">
+									<img src="../img/prd3.jpg" alt="" class="w-100">
+								</div>
+								<div class="prd-bg">
+									<i class="fa fa-picture-o" aria-hidden="true"></i>
+									<h3 class="title">Branding</h3>
+									<p class="title">PROJECT ONE</p>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="img-bg">
+								<div class="img-wrap">
+									<img src="../img/prd4.jpg" alt="" class="w-100">
+								</div>
+								<div class="prd-bg">
+									<i class="fa fa-arrows-alt" aria-hidden="true"></i>
+									<h3 class="title">Branding-Print</h3>
+									<p class="title">PROJECT TWO</p>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="img-bg">
+								<div class="img-wrap">
+									<img src="../img/prd6.jpg" alt="" class="w-100">
+								</div>
+								<div class="prd-bg">
+									<i class="fa fa-video-camera" aria-hidden="true"></i>
+									<h3 class="title">Branding</h3>
+									<p class="title">WATCH ON VIDEO</p>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</li>
+				<li class="digital swiper-slide">
+					<ul>
+						<li>
+							<div class="img-bg">
+								<div class="img-wrap">
+									<img src="../img/prd2.jpg" alt="" class="w-100">
+								</div>
+								<div class="prd-bg">
+									<i class="fa fa-arrows-alt" aria-hidden="true"></i>
+									<h3 class="title">Digital</h3>
+									<p class="title">PROJECT FIVE</p>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</li>
+				<li class="print swiper-slide">
+					<ul>
+						<li>
+							<div class="img-bg">
+								<div class="img-wrap">
+									<img src="../img/prd1.jpg" alt="" class="w-100">
+								</div>
+								<div class="prd-bg">
+									<i class="fa fa-link" aria-hidden="true"></i>
+									<h3 class="title">Print</h3>
+									<p class="title">PROJECT SIX</p>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="img-bg">
+								<div class="img-wrap">
+									<img src="../img/prd4.jpg" alt="" class="w-100">
+								</div>
+								<div class="prd-bg">
+									<i class="fa fa-arrows-alt" aria-hidden="true"></i>
+									<h3 class="title">Branding-Print</h3>
+									<p class="title">PROJECT TWO</p>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="img-bg">
+								<div class="img-wrap">
+									<img src="../img/prd5.jpg" alt="" class="w-100">
+								</div>
+								<div class="prd-bg">
+									<i class="fa fa-video-camera" aria-hidden="true"></i>
+									<h3 class="title">Print</h3>
+									<p class="title">WATCH ON YOUTUBE</p>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</li>
+			</ul>
+		</div>
+		<div class="we-wrapper">
+			<div class="we-wrap wrapper">
+				<div class="creative weare">
+					<div class="icon-wrap">
+						<img src="../img/free-icon-light-bulb-1257847 (1).png" alt="">
+					</div>
+					<div class="txt-wrap">
+						<p class="title">WE'RE CREATIVE</p>
+						<p class="bot">Day handsome addition horrible sensible goodness two contempt. Evening for
+							married summies imperia</p>
+					</div>
+				</div>
+				<div class="eccentrics weare">
+					<div class="icon-wrap">
+						<img src="../img/necktie.png" alt="">
+					</div>
+					<div class="txt-wrap">
+						<p class="title">WE'RE ECCENTRICS</p>
+						<p class="bot">Day handsome addition horrible sensible goodness two contempt. Evening for
+							married summies imperia</p>
+					</div>
+				</div>
+				<div class="awarded weare">
+					<div class="icon-wrap">
+						<img src="../img/medal.png" alt="">
+					</div>
+					<div class="txt-wrap">
+						<p class="title">WE'RE AWARDED</p>
+						<p class="bot">Day handsome addition horrible sensible goodness two contempt. Evening for
+							married summies imperia</p>
+					</div>
+				</div>
 			</div>
+		</div>
 	</div>
+	<div class="team-wrapper wrapper swiper-container">
+		<p class="title">THE CREW</p>
+		<h1 class="title">Team</h1>
+		<ul class="team swiper-wrapper">
+			<li class="swiper-slide">
+				<div class="img-box">
+					<div class="bg-box">
+						<img src="../img/2-1.jpg" class="w-100" alt="">
+					</div>
+					<div class="txt-box">
+						<div class="txt">
+						<h3 class="title">Mike Rose</h3>
+						<p class="title">DESIGNER</p>
+						<p class="bot">Your team is important and we know it. With this element you can highlight the
+							crew.</p>
+						<div class="sns-box">
+							<i class="fa fa-whatsapp"></i>
+							<i class="fa fa-facebook"></i>
+							<i class="fa fa-twitter"></i>
+						</div>
+					</div>
+					</div>
+				</div>
+			</li>
+			<li class="swiper-slide">
+				<div class="img-box">
+					<div class="bg-box">
+						<img src="../img/1.jpg" class="w-100" alt="">
+					</div>
+					<div class="txt-box">
+						<div class="txt">
+						<h3 class="title">Guy Honshi</h3>
+						<p class="title">DESIGNER</p>
+						<p class="bot">Your team is important and we know it. With this element you can highlight the
+							crew.</p>
+						<div class="sns-box">
+							<i class="fa fa-facebook"></i>
+							<i class="fa fa-twitter"></i>
+							<i class="fa fa-instagram"></i>
+							<i class="fa fa-behance"></i>
+						</div>
+					</div>
+					</div>
+				</div>
+			</li>
+			<li class="swiper-slide">
+				<div class="img-box">
+					<div class="bg-box">
+						<img src="../img/2 (1).jpg" class="w-100" alt="">
+					</div>
+					<div class="txt-box">
+						<div class="txt">
+						<h3 class="title">Luke Sky</h3>
+						<p class="title">DESIGNER</p>
+						<p class="bot">Your team is important and we know it. With this element you can highlight the
+							crew.</p>
+						<div class="sns-box">
+							<i class="fa fa-facebook"></i>
+							<i class="fa fa-twitter"></i>
+							<i class="fa fa-instagram"></i>
+							<i class="fa fa-behance"></i>
+						</div>
+					</div>
+					</div>
+				</div>
+			</li>
+			<li class="swiper-slide">
+				<div class="img-box">
+					<div class="bg-box">
+						<img src="../img/3.jpg" class="w-100" alt="">
+					</div>
+					<div class="txt-box">
+						<div class="txt">
+							<h3 class="title">Wayne Sobber</h3>
+							<p class="title">DESIGNER</p>
+							<p class="bot">Your team is important and we know it. With this element you can highlight
+								the crew.</p>
+							<div class="sns-box">
+								<i class="fa fa-facebook"></i>
+								<i class="fa fa-twitter"></i>
+								<i class="fa fa-instagram"></i>
+								<i class="fa fa-behance"></i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</li>
+		</ul>
+	</div>
+	<div class="swiper-pagination"></div>
+	<div class="review-wrapper">
+		<div class="review-wrap ">
+			<ul class="cnt wrapper">
+				<li>
+					<h1 class="title">696</h1>
+					<p class="title">PROJECTS COMPLETED</p>
+					<p class="bot">We had a opportunity to work on wide variety of projects for different clients around the world</p>
+				</li>
+				<li>
+					<h1 class="title">280</h1>
+					<p class="title">PROJECTS COMPLETED</p>
+					<p class="bot">We had a opportunity to work on wide variety of projects for different clients around the world</p>
+				</li>
+				<li>
+					<h1 class="title">14</h1>
+					<p class="title">PROJECTS COMPLETED</p>
+					<p class="bot">We had a opportunity to work on wide variety of projects for different clients around the world</p>
+				</li>
+				<li>
+					<h1 class="title">77</h1>
+					<p class="title">PROJECTS COMPLETED</p>
+					<p class="bot">We had a opportunity to work on wide variety of projects for different clients around the world</p>
+				</li>
+			</ul>
+			<div class="review-bg">
+				<div class="review-bg-wrap">
+					<img src="../img/bg-7.jpg" class="w-100" alt="">
+				</div>
+				<div class="review-title">
+				<p class="title">TESTIMONIALS</p>
+				<h1 class="title">Reviews</h1>
+			</div>
+				<ul class="txt">
+				<li>
+					<h2>“ The team at LeoneDesign done a really great job helping me to customize and implement new features on my page, thank you LeoneDesign!”</h2>
+					<h3>Sophie Robben</h3>
+					<p class="title">DESIGNER</p>
+				</li>
+				<li>
+					<h2>“ The team at LeoneDesign done a really great job helping me to customize and implement new features on my page, thank you LeoneDesign!”</h2>
+					<h3>Sophie Robben</h3>
+					<p class="title">DESIGNER</p>
+				</li>
+				<li>
+					<h2>“ The team at LeoneDesign done a really great job helping me to customize and implement new features on my page, thank you LeoneDesign!”</h2>
+					<h3>Sophie Robben</h3>
+					<p class="title">DESIGNER</p>
+				</li>
+				<li>
+					<h2>“ The team at LeoneDesign done a really great job helping me to customize and implement new features on my page, thank you LeoneDesign!”</h2>
+					<h3>Sophie Robben</h3>
+					<p class="title">DESIGNER</p>
+				</li>
+			</ul>
+			</div>
+		</div>
 	</div>
 	<script src="../js/index.js"></script>
 </body>
