--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="../css/index.css">
 	<script src="../js/jquery-3.5.1.min.js"></script>
 	<script src="../js/swiper-bundle.min.js"></script>
-	<script src="../js/swiper-bundle.min.js"></script>
+	<script src="../js/imagesloaded.pkgd.min.js"></script>
 </head>
 
 <body>
@@ -139,16 +139,16 @@
 			<p class="title">OUR PORTFOLIO</p>
 			<h1 class="title">Gallery</h1>
 			<ul class="menu">
-				<li onclick="$('ul.prd>li.all>ul>li').addClass('active');">ALL
+				<li>ALL
 					<div class="popper">6</div>
 				</li>
-				<li onclick="$('ul.prd>li.branding>ul>li').addClass('active');">BRANDING
+				<li>BRANDING
 					<div class="popper">3</div>
 				</li>
-				<li onclick="$('ul.prd>li.digital>ul>li').addClass('active');">DIGITAL
+				<li>DIGITAL
 					<div class="popper">1</div>
 				</li>
-				<li onclick="$('ul.prd>li.print>ul>li').addClass('active');">PRINT
+				<li>PRINT
 					<div class="popper">3</div>
 				</li>
 			</ul>
@@ -159,13 +159,15 @@
 					<ul>
 						<li>
 							<div class="img-bg">
-								<div class="img-wrap">
-									<img src="../img/prd1.jpg" alt="" class="w-100">
-								</div>
-								<div class="prd-bg">
-									<i class="fa fa-link" aria-hidden="true"></i>
-									<h3 class="title">Print</h3>
-									<p class="title">PROJECT SIX</p>
+								<div>
+									<div class="img-wrap">
+										<img src="../img/prd1.jpg" alt="" class="w-100">
+									</div>
+									<div class="prd-bg">
+										<i class="fa fa-link" aria-hidden="true"></i>
+										<h3 class="title">Print</h3>
+										<p class="title">PROJECT SIX</p>
+									</div>
 								</div>
 							</div>
 						</li>
